@@ -70,7 +70,6 @@
 <a href="CoreTasks/signjar.html">SignJar</a><br>
 <a href="CoreTasks/sleep.html">Sleep</a><br>
 <a href="CoreTasks/sql.html">Sql</a><br>
-<a href="CoreTasks/style.html">Style</a><br>
 <a href="CoreTasks/tar.html">Tar</a><br>
 <a href="CoreTasks/taskdef.html">Taskdef</a><br>
 <a href="CoreTasks/touch.html">Touch</a><br>
@@ -83,6 +82,7 @@
 <a href="CoreTasks/uptodate.html">Uptodate</a><br>
 <a href="CoreTasks/waitfor.html">Waitfor</a><br>
 <a href="CoreTasks/war.html">War</a><br>
+<a href="CoreTasks/style.html">Xslt/Style</a><br>
 <a href="CoreTasks/zip.html">Zip</a><br>
 </body>
 </html>
