@@ -31,6 +31,7 @@ filter=org.apache.tools.ant.taskdefs.Filter
 fixcrlf=org.apache.tools.ant.taskdefs.FixCRLF
 patch=org.apache.tools.ant.taskdefs.Patch
 style=org.apache.tools.ant.taskdefs.XSLTProcess
+xslt=org.apache.tools.ant.taskdefs.XSLTProcess
 touch=org.apache.tools.ant.taskdefs.Touch
 signjar=org.apache.tools.ant.taskdefs.SignJar
 genkey=org.apache.tools.ant.taskdefs.GenerateKey
